# langchain-azure

./: .gitignore  README.md  TRACER_ANALYSIS.md  maintainers.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
.github/actions/poetry_setup/: action.yml
.github/scripts/: check_diff.py  get_min_versions.py
.github/workflows/: _compile_integration_test.yml  _lint.yml  _release.yml  _test.yml  _test_release.yml  check_diffs.yml
libs/azure-ai/: Makefile  README.md  pyproject.toml
libs/azure-ai/docs/: test.py  (+6 more)
libs/azure-cosmosdb/: README.md  pyproject.toml
libs/azure-dynamic-sessions/: README.md  pyproject.toml
libs/azure-postgresql/: Makefile  pyproject.toml
libs/azure-storage/: Makefile  pyproject.toml
libs/sqlserver/: Makefile  README.md  pyproject.toml
samples/: async_trace_propagation_appinsights.py  async_trace_propagation_stress_test.py  issue_290_async_trace_fragmentation.py  tracer_compat_sample.py
samples/evaluator-optimizer-due-diligence/: .env.example  README.md  agents.py  eval_config.py  graph.py  main.py  prompts.py  requirements.txt  state.py  tools.py
samples/foundry-memory/: .env.example  README.md  basic_usage.py
samples/multi-agent-travel-planner/: nested_agent_travel_planner.py
samples/rag-storage-document-loaders/: README.md  embed.py  query.py  requirements.txt
samples/react-agent-docintelligence/: .env.example  Makefile  README.md  langgraph.json  pyproject.toml
samples/react-agent-docintelligence/src/react_agent/: graph.py  prompts.py
(+123 files in other folders)
