[project]
name = "react-agent-docintelligence"
version = "0.0.1"
description = "Starter template for making a custom Reasoning and Action agent (using tool calling) in LangGraph and Azure AI Foundry."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10.0,<4.0"

dependencies = [
    "python-dotenv>=1.0.1",
    "langchain==1.0.2",
    "langchain-azure-ai[opentelemetry,tools]>=1.0.2,<2",
    "langgraph-cli[inmem]>=0.4.4"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = ">=1.11.1"
ruff = ">=0.6.1"
pytest = ">=8.3.5"
pytest-asyncio = "*"
vcrpy = "*"

[build-system]
requires = ["poetry-core~=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
